--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Seja bem vinda! - Vanilla Beauty</title>
+    <title>Links - Vanilla Beauty</title>
     <link rel="icon" type="image/x-icon" href="img/fav.png">
 
     <!-- Metas -->
