--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Links - Vanilla Beauty</title>
+    <title>Seja bem vinda! - Vanilla Beauty</title>
     <link rel="icon" type="image/x-icon" href="img/fav.png">
 
     <!-- Metas -->
@@ -27,7 +27,7 @@
 
             <div class="row justify-content-center mb-4">
                 <div class="col-12">
-                    <h1>Seja bem  <span class="besley">vinda!</span></h1>
+                    <h1>Seja <span class="besley">bem vinda!</span></h1>
                     Como podemos te ajudar?
                 </div>
             </div>
