--- a/index.html
+++ b/index.html
@@ -61,6 +61,24 @@
         </div>
     </footer>
 
+    <footer>
+        <div class="container">
+            <div class="row justify-content-center text-center mb-5">
+                <div class="col-12">
+                    Nosso horário de atendimento é:<br>Terça a Sexta das 10h às 18h30 <br> Sábado das 9h às 17h
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-12 text-center">
+                    Vanilla Beauty - <span id="year"></span>
+                    <div class="disclaimer">
+                        Todos os direitos reservados
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <script src="js/plugins.js"></script>
 
     <script src="js/script.js"></script>
