--- a/novo.html
+++ b/novo.html
@@ -16,9 +16,14 @@
 
 </head>
 
-<body scroll="no">
+<body>
+
 
     <div class="content d-flex flex-column">
+
+        <div class="background">
+
+        </div>
 
         <!-- Logo -->
         <div class="logo-photo">
@@ -26,9 +31,9 @@
         </div>
 
         <!-- Lista Botões -->
-        <div class="sec-botoes flex-fill">
-            
+        <div class="sec-botoes flex-fill"> 
             <div class="group-btn d-flex flex-column justify-content-center">
+                
                 <!-- Botões -->
                 <a href="#" class="btn">
                     Agendamento Online
