--- a/index.html
+++ b/index.html
@@ -9,59 +9,103 @@
 
     <!-- Metas -->
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Besley:ital,wght@1,400;1,500;1,600&family=Poppins:wght@400;500&display=swap"
+        rel="stylesheet">
+
     <!-- CSS -->
     <link href="css/plugins.css" rel="stylesheet">
-    <link href="css/style.css"  rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
 
 </head>
 
-<body class="d-flex flex-column justify-content-between">
+<body>
 
-    <header class="d-flex flex-column justify-content-center">
-        <img src="img/vanilla-beauty.svg" class="logo">
-    </header>
+    <!-- Logo e Bg -->
+    <div class="background">
 
-    <section>
-        <div class="container text-center ">
 
-            <div class="row justify-content-center mb-4">
-                <div class="col-12">
-                    <h1>Seja <span class="besley">bem vinda!</span></h1>
-                    Como podemos te ajudar?
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-12 d-flex flex-column justify-content-between">
-                    <a data-aos="fade-up" data-aos-delay="0" href="" class="btn-vnla">Agendamento Online</a>
-                    <a data-aos="fade-up" data-aos-delay="200" href="" class="btn-vnla">Serviços</a>
-                    <a data-aos="fade-up" data-aos-delay="400" href="" class="btn-vnla btn-whats"><img src="img/whatsapp.svg"> Atendimento WhatsApp</a>
-                </div>
-            </div>
-
+        <!-- Imagens de fundo -->
+        <div class="background">
+            <div class="background-img ukiyo" data-u-speed="-1" data-u-willchange style="background-image: url('img/bg-mobile.jpg');"></div>
+            <div class="background-img ukiyo" data-u-speed="-1" style="background-image: url('img/bg-mobile2.jpg');"></div>
+            <div class="background-img ukiyo" data-u-speed="-1" style="background-image: url('img/bg-mobile3.jpg');"></div>
         </div>
-    </section>
 
-    <footer>
+
+
+        <div class="logo-photo">
+            <img src="img/vanilla-beauty.svg">
+        </div>
+    </div>
+
+    <!-- Boas Vindas -->
+    <div class="boas-vindas d-flex align-items-center">
         <div class="container">
-            <div class="row justify-content-center text-center mb-5">
-                <div class="col-12">
-                    Nosso horário de atendimento é:<br>Terça a Sexta das 10h às 18h30 <br> Sábado das 9h às 17h
-                </div>
-            </div>
             <div class="row justify-content-center">
                 <div class="col-12 text-center">
-                    Vanilla Beauty - <span id="year"></span>
-                    <div class="disclaimer">
-                        Todos os direitos reservados
-                    </div>
+                    <h1>Seja <span class="besley">bem vinda!</span></h1>
+                    <p>Como podemos te ajudar?</p>
                 </div>
             </div>
         </div>
-    </footer>
+    </div>
+
+    <!-- Lista Botões -->
+    <div class="sec-botoes flex-fill">
+        <div class="group-btn d-flex flex-column justify-content-center">
+            <a href="#">
+                <button class="btn-vnle" data-aos="fade-up" data-aos-delay="0">
+                    Agendamento Online
+                </button>
+            </a>
+            <a href="#">
+                <button class="btn-vnle" data-aos="fade-up" data-aos-delay="200">
+                    Serviços
+                </button>
+            </a>
+            <a href="#">
+                <button class="btn-vnle btn-whts" data-aos="fade-up" data-aos-delay="300">
+                    <img src="img/whatsapp.svg">Atendimento WhatsApp
+                </button>
+            </a>
+        </div>
+    </div>
+
+    <!-- Atendimento -->
+    <div class="atendimento d-flex align-items-center">
+        <div class="container ">
+            <div class="row justify-content-center ">
+                <div class="col-12 text-center">
+                    <p>
+                        Nosso horário de atendimento é <br>
+                        Terça a Sexta das 10h às 18h30<br>
+                        Sábado das 9h às 17h
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="footer text-center">
+        <!-- Social Links-->
+        <ul>
+            <li><a href=""><img src="img/instagram.svg"></a></li>
+        </ul>
+
+        <!-- Disclaimer -->
+        <p>Vanilla Beauty - <span id="year"></span></p>
+        <p>Todos os direitos reservados</p>
+    </div>
+
+
 
     <script src="js/plugins.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ukiyojs@4.0.4/dist/ukiyo.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 
