--- a/index.html
+++ b/index.html
@@ -30,12 +30,10 @@
 
         <!-- Imagens de fundo -->
         <div class="background">
-            <div class="background-img ukiyo" data-u-speed="-1" data-u-willchange style="background-image: url('img/bg-mobile.jpg');"></div>
-            <div class="background-img ukiyo" data-u-speed="-1" style="background-image: url('img/bg-mobile2.jpg');"></div>
-            <div class="background-img ukiyo" data-u-speed="-1" style="background-image: url('img/bg-mobile3.jpg');"></div>
-        </div>
-
-
+            <div class="background-img ukiyo" data-u-scale="1.5" data-img="1.5" style="background-image: url('img/bg-mobile.jpg');"></div>
+            <div class="background-img ukiyo" data-u-scale="1.5" data-img="1.5" style="background-image: url('img/bg-mobile2.jpg');"></div>
+            <div class="background-img ukiyo" data-u-scale="1.5" data-img="1.5" style="background-image: url('img/bg-mobile3.jpg');"></div>
+        </div> 
 
         <div class="logo-photo">
             <img src="img/vanilla-beauty.svg">
