--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/x-icon" href="img/fav.png">
 
     <!-- Metas -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="#9D7E6C">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
