--- a/index.html
+++ b/index.html
@@ -29,12 +29,17 @@
     <div class="background">
 
 
-        <!-- Imagens de fundo -->
+        <!-- Transições 
         <div class="background">
-            <div class="background-img ukiyo" data-u-scale="1.5" data-img="1.5" style="background-image: url('img/bg-mobile.jpg');"></div>
-            <div class="background-img ukiyo" data-u-scale="1.5" data-img="1.5" style="background-image: url('img/bg-mobile2.jpg');"></div>
-            <div class="background-img ukiyo" data-u-scale="1.5" data-img="1.5" style="background-image: url('img/bg-mobile3.jpg');"></div>
+            <div class="background-img ukiyo" data-u-scale="1.4" data-u-speed="1.2" style="background-image: url('img/bg-mobile.jpg');"></div>
+            <div class="background-img ukiyo" data-u-scale="1.4" data-u-speed="1.2" style="background-image: url('img/bg-mobile2.jpg');"></div>
+            <div class="background-img ukiyo" data-u-scale="1.4" data-u-speed="1.2" style="background-image: url('img/bg-mobile3.jpg');"></div>
         </div> 
+        -->
+
+        <div class="background-img ukiyo" data-u-scale="2" data-u-speed="1.2"
+            style="background-image: url('img/bg-fixo.jpg');"></div>
+
 
         <div class="logo-photo">
             <img src="img/vanilla-beauty.svg">
@@ -61,11 +66,9 @@
                     Agendamento Online
                 </button>
             </a>
-            <a href="#">
-                <button class="btn-vnle" data-aos="fade-up" data-aos-delay="200">
-                    Serviços
-                </button>
-            </a>
+            <button class="btn-vnle disable" data-aos="fade-up" data-aos-delay="200">
+                Catálogo de Serviços <span class="badge text-bg-secondary">Em breve</span>
+            </button>
             <a href="#">
                 <button class="btn-vnle btn-whts" data-aos="fade-up" data-aos-delay="300">
                     <img src="img/whatsapp.svg">Atendimento WhatsApp
@@ -93,7 +96,7 @@
     <div class="footer text-center">
         <!-- Social Links-->
         <ul>
-            <li><a href=""><img src="img/instagram.svg"></a></li>
+            <li><a href="https://www.instagram.com/vanillabeauty____/"><img src="img/instagram.svg"></a></li>
         </ul>
 
         <!-- Disclaimer -->
