--- a/index - Copia.html
+++ b/index - Copia.html
@@ -31,18 +31,15 @@
 
         <!-- Transições -->
         <div class="background">
-            <div class="background-img ukiyo" data-u-scale="1.4" data-u-speed="1.2"
-                style="background-image: url('img/bg-mobile.jpg');"></div>
-            <div class="background-img ukiyo" data-u-scale="1.4" data-u-speed="1.2"
-                style="background-image: url('img/bg-mobile2.jpg');"></div>
-            <div class="background-img ukiyo" data-u-scale="1.4" data-u-speed="1.2"
-                style="background-image: url('img/bg-mobile3.jpg');"></div>
-        </div>
-
-        <!-- Foto Fixa 
+            <div class="background-img ukiyo" data-u-scale="1.4" data-u-speed="1.2" style="background-image: url('img/bg-mobile.jpg');"></div>
+            <div class="background-img ukiyo" data-u-scale="1.4" data-u-speed="1.2" style="background-image: url('img/bg-mobile2.jpg');"></div>
+            <div class="background-img ukiyo" data-u-scale="1.4" data-u-speed="1.2" style="background-image: url('img/bg-mobile3.jpg');"></div>
+        </div> 
+        
+        <!--
         <div class="background-img ukiyo" data-u-scale="2" data-u-speed="1.2"
-            style="background-image: url('img/bg-fixo.jpg');"></div>-->
-
+            style="background-image: url('img/bg-fixo.jpg');"></div>
+-->
 
         <div class="logo-photo">
             <img src="img/vanilla-beauty.svg">
@@ -64,19 +61,19 @@
     <!-- Lista Botões -->
     <div class="sec-botoes flex-fill">
         <div class="group-btn d-flex flex-column justify-content-center">
-            <a href="https://efola21.gendo.app/v2/">
+            <a href="#">
                 <button class="btn-vnle" data-aos="fade-up" data-aos-delay="0">
                     Agendamento Online
                 </button>
             </a>
-            <a href="https://wa.me/message/N4KI7ZR47Z3MM1">
+            <button class="btn-vnle disable" data-aos="fade-up" data-aos-delay="200">
+                Catálogo de Serviços <span class="badge text-bg-secondary">Em breve</span>
+            </button>
+            <a href="#">
                 <button class="btn-vnle btn-whts" data-aos="fade-up" data-aos-delay="300">
                     <img src="img/whatsapp.svg">Atendimento WhatsApp
                 </button>
             </a>
-            <button class="btn-vnle disable" data-aos="fade-up" data-aos-delay="200">
-                Catálogo<span class="badge text-bg-secondary">Em breve</span>
-            </button>
         </div>
     </div>
 
