--- a/index.html
+++ b/index.html
@@ -39,86 +39,90 @@
             style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
-    <!-- Logo e Bg -->
-    <div class="background">
+
+    <div id="pre-loader">
+        <div id="vnle-loader"></div>
+    </div>
 
 
-        <!-- Transições -->
+    <div id="main-content">
+
+        <!-- Logo e Bg -->
         <div class="background">
-            <div class="background-img ukiyo" data-u-scale="1.4" data-u-speed="1.2"
-                style="background-image: url('img/bg-mobile.jpg');"></div>
-            <div class="background-img ukiyo" data-u-scale="1.4" data-u-speed="1.2"
-                style="background-image: url('img/bg-mobile2.jpg');"></div>
-            <div class="background-img ukiyo" data-u-scale="1.4" data-u-speed="1.2"
-                style="background-image: url('img/bg-mobile3.jpg');"></div>
-        </div>
-
-        <!-- Foto Fixa 
+            <!-- Transições -->
+            <div class="background">
+                <div class="background-img ukiyo" data-u-scale="1.4" data-u-speed="1.2"
+                    style="background-image: url('img/bg-mobile.jpg');"></div>
+                <div class="background-img ukiyo" data-u-scale="1.4" data-u-speed="1.2"
+                    style="background-image: url('img/bg-mobile2.jpg');"></div>
+                <div class="background-img ukiyo" data-u-scale="1.4" data-u-speed="1.2"
+                    style="background-image: url('img/bg-mobile3.jpg');"></div>
+            </div>
+            <!-- Foto Fixa 
         <div class="background-img ukiyo" data-u-scale="2" data-u-speed="1.2"
             style="background-image: url('img/bg-fixo.jpg');"></div>-->
-
-
-        <div class="logo-photo">
-            <img src="img/vanilla-beauty.svg">
+            <div class="logo-photo">
+                <img src="img/vanilla-beauty.svg">
+            </div>
         </div>
-    </div>
 
-    <!-- Boas Vindas -->
-    <div class="boas-vindas d-flex align-items-center">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-12 text-center">
-                    <h1>Seja <span class="besley">bem vinda!</span></h1>
-                    <p>Como podemos te ajudar?</p>
+        <!-- Boas Vindas -->
+        <div class="boas-vindas d-flex align-items-center">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-12 text-center">
+                        <h1>Seja <span class="besley">bem vinda!</span></h1>
+                        <p>Como podemos te ajudar?</p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <!-- Lista Botões -->
-    <div class="sec-botoes flex-fill">
-        <div class="group-btn d-flex flex-column justify-content-center">
-            <a href="https://efola21.gendo.app/v2/">
-                <button class="btn-vnle" data-aos="fade-up" data-aos-delay="0">
-                    Agendamento Online
+        <!-- Lista Botões -->
+        <div class="sec-botoes flex-fill">
+            <div class="group-btn d-flex flex-column justify-content-center">
+                <a href="https://efola21.gendo.app/v2/">
+                    <button class="btn-vnle" data-aos="fade-up" data-aos-delay="0">
+                        Agendamento Online
+                    </button>
+                </a>
+                <a href="https://wa.me/message/N4KI7ZR47Z3MM1">
+                    <button class="btn-vnle btn-whts" data-aos="fade-up" data-aos-delay="200">
+                        <img src="img/whatsapp.svg">Atendimento WhatsApp
+                    </button>
+                </a>
+                <button class="btn-vnle disable" data-aos="fade-up" data-aos-delay="300">
+                    Catálogo<span class="badge text-bg-secondary">Em breve</span>
                 </button>
-            </a>
-            <a href="https://wa.me/message/N4KI7ZR47Z3MM1">
-                <button class="btn-vnle btn-whts" data-aos="fade-up" data-aos-delay="200">
-                    <img src="img/whatsapp.svg">Atendimento WhatsApp
-                </button>
-            </a>
-            <button class="btn-vnle disable" data-aos="fade-up" data-aos-delay="300">
-                Catálogo<span class="badge text-bg-secondary">Em breve</span>
-            </button>
+            </div>
         </div>
-    </div>
 
-    <!-- Atendimento -->
-    <div class="atendimento d-flex align-items-center">
-        <div class="container ">
-            <div class="row justify-content-center ">
-                <div class="col-12 text-center">
-                    <p>
-                        Nosso horário de atendimento é <br>
-                        Terça a Sexta das 10h às 18h30<br>
-                        Sábado das 9h às 17h
-                    </p>
+        <!-- Atendimento -->
+        <div class="atendimento d-flex align-items-center">
+            <div class="container ">
+                <div class="row justify-content-center ">
+                    <div class="col-12 text-center">
+                        <p>
+                            Nosso horário de atendimento é <br>
+                            Terça a Sexta das 10h às 18h30<br>
+                            Sábado das 9h às 17h
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
 
-    <div class="footer text-center">
-        <!-- Social Links-->
-        <ul>
-            <li><a href="https://www.instagram.com/vanillabeauty____/"><img src="img/instagram.svg"></a></li>
-        </ul>
+        <div class="footer text-center">
+            <!-- Social Links-->
+            <ul>
+                <li><a href="https://www.instagram.com/vanillabeauty____/"><img src="img/instagram.svg"></a></li>
+            </ul>
 
-        <!-- Disclaimer -->
-        <p>Vanilla Beauty - <span id="year"></span></p>
-        <p>Todos os direitos reservados</p>
+            <!-- Disclaimer -->
+            <p>Vanilla Beauty - <span id="year"></span></p>
+            <p>Todos os direitos reservados</p>
+        </div>
     </div>
 
 
