--- a/index.html
+++ b/index.html
@@ -82,16 +82,16 @@
         <div class="sec-botoes flex-fill">
             <div class="group-btn d-flex flex-column justify-content-center">
                 <a href="https://efola21.gendo.app/v2/">
-                    <button class="btn-vnle" data-aos="fade-up" data-aos-delay="0">
+                    <button class="btn-vnle">
                         Agendamento Online
                     </button>
                 </a>
                 <a href="https://wa.me/message/N4KI7ZR47Z3MM1">
-                    <button class="btn-vnle btn-whts" data-aos="fade-up" data-aos-delay="200">
+                    <button class="btn-vnle btn-whts">
                         <img src="img/whatsapp.svg">Atendimento WhatsApp
                     </button>
                 </a>
-                <button class="btn-vnle disable" data-aos="fade-up" data-aos-delay="300">
+                <button class="btn-vnle disable">
                     Catálogo<span class="badge text-bg-secondary">Em breve</span>
                 </button>
             </div>
