--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="background-img ukiyo" data-u-scale="2" data-u-speed="1.2"
             style="background-image: url('img/bg-fixo.jpg');"></div>-->
             <div class="logo-photo">
-                <img src="img/vanilla-beauty.svg">
+                <img src="img/vanilla-beauty-white.svg">
             </div>
         </div>
 
